# constraintsGM

./: CMakeLists.txt  README.md  constraintsGMConfig.cmake.in  main.cpp
cmake_modules/: FindCCD.cmake  FindFCL.cmake  FindQGLViewer.cmake
demos/: demoVisualizer.cpp
include/CollisionDetection/: CollisionDetection.h  CollisionDetectionColdet.h  CollisionDetectionFCL.h
include/Defs/: defs.h  fcl.h  simulator_defs.h
include/Optimizer/: cmaes.h  optimizer.h  pso.h
include/Regression/: GaussianMixture.h  function.h  individual.h  multivariateGaussian.h  population.h  regression.h
include/RobotModelMat/: AnymalRobot.h  Messor2Robot.h  insectLeg.h  kinematic.h  kinematicLie.h  leg.h  robot.h
include/Utilities/: 3dsloader.h  objects3DS.h  observer.h  recorder.h  stopwatch.h
include/Visualizer/: Qvisualizer.h
resources/: CMAES.xml  coldet.xml  configGlobal.xml  controllerMessor2.xml  optimizeGMmargin.xml  regressionColl.xml  regressionCollNeigh.xml  regressionKinemMargin.xml  regressionOutKinemMargin.xml  walkersQVisualizerConfig.xml
resources/Anymal/: Anymal.xml  AnymalLeg1.xml  AnymalLeg2.xml  AnymalLeg3.xml  AnymalLeg4.xml  body.3ds
resources/Anymal/legs/: foot.3ds  hip_l.3ds  hip_r.3ds  shank_l.3ds  shank_r.3ds  thigh_l.3ds  thigh_r.3ds
resources/Anymal_C/: Anymal_C.xml  Anymal_CLeg1.xml  Anymal_CLeg2.xml  Anymal_CLeg3.xml  Anymal_CLeg4.xml  controllerPIDTorque.xml  controllerPID_ODE.xml  controllerPIDpos.xml  guidedRRT.xml  guidedRRTStarConnect.xml  plannerRRTConnect.xml  plannerRRTStarConnect.xml
resources/MessorII/: MessorII.xml  MessorIILeg.xml  MessorIILeg1.xml  MessorIILeg2.xml  MessorIILeg3.xml  MessorIILeg4.xml  MessorIILeg5.xml  MessorIILeg6.xml  controllerPID.xml  controllerPIDTorque.xml  controllerPIDVel.xml  corpus.3ds  coxa.3ds  femur.3ds  vitulus.3ds
scripts/: clone_deps.sh
src/CollisionDetection/: CollisionDetectionColdet.cpp  CollisionDetectionFCL.cpp
src/Defs/: defs.cpp
src/Optimizer/: cmaes.cpp  pso.cpp
src/Regression/: GaussianMixture.cpp  function.cpp  individual.cpp  multivariateGaussian.cpp  population.cpp
src/RobotModelMat/: AnymalRobot.cpp  Messor2Robot.cpp  insectLeg.cpp  kinematicLie.cpp  robot.cpp
src/Utilities/: 3dsloader.cpp  objects3DS.cpp  observer.cpp  recorder.cpp
src/Visualizer/: Qvisualizer.cpp
